# schematic

./: .travis.yml  ChangeLog.md  LICENSE  README.md  release  release.nix  schematic.cabal  stack-13.21.yaml  stack-13.7.yaml  stack.yaml  stackage-overlay.json
src/Data/: Schematic.hs
src/Data/Aeson/: Validation.hs
src/Data/Schematic/: Compat.hs  Constraints.hs  DSL.hs  Generator.hs  Helpers.hs  Instances.hs  JsonSchema.hs  Lens.hs  Migration.hs  OldSchema.hs  Path.hs  Schema.hs  Schema.hs-boot  Utils.hs  Validatable.hs  Validation.hs  Verifier.hs
src/Data/Schematic/Generator/: Regex.hs
src/Data/Schematic/Verifier/: Array.hs  Common.hs  Number.hs  Text.hs
test/: HelpersSpec.hs  JsonSchemaSpec.hs  LensSpec.hs  SchemaSpec.hs
