name:                schematic
version:             0.4.2.0
synopsis:            JSON-biased spec and validation tool
license:             BSD3
license-file:        LICENSE
author:              Denis Redozubov
maintainer:          denis.redozubov@gmail.com
homepage:            http://github.com/typeable/schematic
Bug-reports:         http://github.com/typeable/schematic/issues/
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Schematic
                     , Data.Schematic.DSL
                     , Data.Schematic.Instances
                     , Data.Schematic.JsonSchema
                     , Data.Schematic.Helpers
                     , Data.Schematic.Lens
                     , Data.Schematic.Migration
                     , Data.Schematic.Path
                     , Data.Schematic.Schema
                     , Data.Schematic.Validation
  ghc-options:       -Wall
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , DeriveGeneric
                     , DeriveDataTypeable
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , KindSignatures
                     , InstanceSigs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedLists
                     , OverloadedStrings
                     , PolyKinds
                     , QuasiQuotes
                     , PartialTypeSignatures
                     , RankNTypes
                     , RecordWildCards
                     , StandaloneDeriving
                     , ScopedTypeVariables
                     , TemplateHaskell
                     , TypeApplications
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UndecidableInstances
  build-depends:       base >=4.9 && <4.11
                     , bytestring
                     , aeson >= 1
                     , containers
                     , hjsonschema
                     , mtl
                     , profunctors
                     , regex-tdfa
                     , regex-tdfa-text
                     , scientific
                     , singletons >= 2.2
                     , smallcheck
                     , tagged
                     , template-haskell
                     , text
                     , union
                     , unordered-containers
                     , validationt >= 0.1.0.1
                     , vector
                     , vinyl
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  default-language:   Haskell2010
  build-depends:       HUnit
                     , aeson >= 1
                     , base >=4.9 && <4.11
                     , bytestring
                     , containers
                     , hjsonschema
                     , hspec >= 2.2.0
                     , hspec-core
                     , hspec-discover
                     , hspec-smallcheck
                     , lens
                     , regex-tdfa
                     , regex-tdfa-text
                     , schematic
                     , smallcheck
                     , singletons
                     , tagged
                     , text
                     , unordered-containers
                     , validationt >= 0.1.0.1
                     , vinyl
  other-modules:       SchemaSpec
                     , HelpersSpec
                     , LensSpec
                     , JsonSchemaSpec