name:                schematic
version:             0.5.0.0
synopsis:            JSON-biased spec and validation tool
description:         JSON-biased spec and validation tool. Makes possible to have a schema as a haskell type and derive json instances, validation actions, JSON generation for property-test generically. Built-in lens support.
license:             BSD3
license-file:        LICENSE
author:              Denis Redozubov
maintainer:          denis.redozubov@gmail.com
homepage:            http://github.com/typeable/schematic
Bug-reports:         http://github.com/typeable/schematic/issues/
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Schematic
                     , Data.Schematic.DSL
                     , Data.Schematic.Generator
                     , Data.Schematic.Generator.Regex
                     , Data.Schematic.Instances
                     , Data.Schematic.JsonSchema
                     , Data.Schematic.Helpers
                     , Data.Schematic.Lens
                     , Data.Schematic.Migration
                     , Data.Schematic.Path
                     , Data.Schematic.Schema
                     , Data.Schematic.Validation
                     , Data.Schematic.Verifier
                     , Data.Schematic.Verifier.Array
                     , Data.Schematic.Verifier.Common
                     , Data.Schematic.Verifier.Number
                     , Data.Schematic.Verifier.Text
  ghc-options:       -Wall
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , DeriveGeneric
                     , DeriveDataTypeable
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , KindSignatures
                     , InstanceSigs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedLists
                     , OverloadedStrings
                     , PolyKinds
                     , QuasiQuotes
                     , PartialTypeSignatures
                     , RankNTypes
                     , RecordWildCards
                     , StandaloneDeriving
                     , ScopedTypeVariables
                     , TemplateHaskell
                     , TypeApplications
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UndecidableInstances
  build-depends:       base >=4.11 && <4.12
                     , bytestring
                     , aeson >= 1
                     , containers
                     , hjsonschema
                     , mtl
                     , profunctors
                     , regex-tdfa
                     , regex-tdfa-text
                     , scientific
                     , singletons >= 2.4
                     , smallcheck
                     , tagged
                     , template-haskell
                     , text
                     , union
                     , unordered-containers
                     , validationt >= 0.2.1.0
                     , vector
                     , vinyl
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  default-language:   Haskell2010
  build-depends:       HUnit
                     , aeson >= 1
                     , base >=4.11 && <4.12
                     , bytestring
                     , containers
                     , hjsonschema
                     , hspec >= 2.2.0
                     , hspec-core
                     , hspec-discover
                     , hspec-smallcheck
                     , lens
                     , regex-tdfa
                     , regex-tdfa-text
                     , schematic
                     , smallcheck
                     , singletons
                     , tagged
                     , text
                     , unordered-containers
                     , validationt >= 0.2.1.0
                     , vinyl
  other-modules:       SchemaSpec
                     , HelpersSpec
                     , LensSpec
                     , JsonSchemaSpec
